# cmake-generator

./: README.md  cmake-generator  collect-cmake-vars.sh  compile_commands  json2cmake.py  setup.py
cmake_generator/json2cmake/: collect_cmake_vars.py  command.py  converter.py  database.py  denpendency.py  generator.py  libnames.py  main.py  migration.py  pkg_replace.py  pkgmap.py  target.py  utils.py
cmake_generator/json2cmake/tests/: test_command.py  test_converter.py  test_database.py  test_generator.py  test_migration.py  test_pkg_replace.py  test_target.py  utils.py
ldlogger/: CMakeLists.txt  Makefile  README.md
ldlogger/src/: ldlogger-hooks.c  ldlogger-tool-custom.c  ldlogger-tool-gcc.c  ldlogger-tool.c  ldlogger-tool.h
